2522 [FDK-AAC Encoder]      added FDK-AAC encoder support
                            due to the FDK-AAC license the encoder will not be available in the online updater
2521 [Audio Encoder]        added custom command line support
2520 [Chapter Creator]      fixed sometimes incorrect duration (regression of 2516)
2519 [Update]               if an outdated package is enabled the update will be downloaded automatically (if auto update is not disabled)
     [Update]               reduced time after an inactive package will be disabled to 14 days
                            a lot of the last changes in the update handling are caused by the fact that the remaining update server has to be protected
                            if you want to help please have a look here: http://forum.doom9.org/showpost.php?p=1706329&postcount=4410
2518                        updated copyright year to 2015
2517 [HD Streams Extractor] cosmetics
2516 [Chapter Creator]      added option to sort the title list by chapter count
     [Chapter Creator]      cosmetics
2515 [OneClick]             improved handling of track information in case no language information is available (regression of 2512). Part II
2514 [OneClick]             improved handling of track information in case no language information is available (regression of 2512)
2513 [Update]               removed update server megui.xvidvideo.ru completly
     [Update]               increased update data refresh interval to 2 days for the development server
2512 [OneClick]             better support for Blu-ray playlist where eac3to and mediainfo report different track information
2511 [Chapter Creator]      improved error handling
2510 [VobSubber]            improved error handling
2509 [OneClick]             fixed removing the wrong subtitle track when using the DEL key
2508 [x265]                 adjusted command line for recent avs4x265

Changelog 2501 --> 2507

Features/Changes: